WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155973
REGRESSION (
r196813
): Missing plug-in placeholder is missing
https://bugs.webkit.org/show_bug.cgi?id=155973
Summary
REGRESSION (r196813): Missing plug-in placeholder is missing
alan
Reported
2016-03-29 10:05:40 PDT
1, launch Safari (not having installed Flash yet) 2, go to www.badgerbadgerbadger.com (auto-playing looping Flash animation) "Missing Plug-in" button is missing.
Attachments
Patch
(2.16 KB, patch)
2016-03-29 10:21 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-03-29 10:06:07 PDT
rdar://problem/25068392
alan
Comment 2
2016-03-29 10:21:36 PDT
Created
attachment 275102
[details]
Patch
Andy Estes
Comment 3
2016-03-29 10:23:36 PDT
Comment on
attachment 275102
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=275102&action=review
> Source/WebCore/ChangeLog:3 > + REGRESSION (
r196813
): Missing plug-in placeholder is missing
:|
WebKit Commit Bot
Comment 4
2016-03-29 11:33:34 PDT
Comment on
attachment 275102
[details]
Patch Clearing flags on attachment: 275102 Committed
r198785
: <
http://trac.webkit.org/changeset/198785
>
WebKit Commit Bot
Comment 5
2016-03-29 11:33:38 PDT
All reviewed patches have been landed. Closing bug.
Myles C. Maxfield
Comment 6
2016-03-29 11:57:19 PDT
Please add a expected-to-be-different reftest. You can do this by naming the expected file mytest-expected-mismatch.html
alan
Comment 7
2016-03-29 12:09:09 PDT
(In reply to
comment #6
)
> Please add a expected-to-be-different reftest. You can do this by naming the > expected file mytest-expected-mismatch.html
I am not much of a fan of -mismatch, but I guess it's better than no test.
alan
Comment 8
2016-03-31 09:49:34 PDT
LayoutTests/plugins/missing-plugin-placeholder.html Committed
r198898
: <
http://trac.webkit.org/changeset/198898
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug