REGRESSION (r196813): Missing plug-in placeholder is missing https://bugs.webkit.org/show_bug.cgi?id=155973 <rdar://problem/25068392>

Reviewed by Andy Estes.

Show unavailable plugin indicator when UnavailablePluginIndicatorState (uninitialized, hidden, visible) is not set to hidden explicitly.
It matches pre-196813 behaviour.

Unable to test.

* rendering/RenderEmbeddedObject.h:
(WebCore::RenderEmbeddedObject::showsUnavailablePluginIndicator):


Canonical link: https://commits.webkit.org/174086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198785 268f45cc-cd09-0410-ab3c-d52691b4dbfc